--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
     <button
       class="hotspot"
       style="top: 30%; left: 40%;"
-      data-audio="audio/poem1.mp3"
+      data-audio="audio/poem1.wav"
       data-title="Poem 1 – North"
     ></button>
 
     <button
       class="hotspot"
       style="top: 65%; left: 70%;"
-      data-audio="audio/poem2.mp3"
+      data-audio="audio/poem2.wav"
       data-title="Poem 2 – South-East"
     ></button>
   </div>
@@ -127,3 +127,4 @@
   </script>
 </body>
 </html>
+
