--- a/index.html
+++ b/index.html
@@ -16,19 +16,23 @@
       color: #fff;
     }
 
-    .map-container {
-      position: relative;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    .map-container img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
+  .map-container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .map-container img {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    width: auto;
+    display: block;
+  }
 
     .hotspot {
       position: absolute;
@@ -127,5 +131,6 @@
   </script>
 </body>
 </html>
+
 
 
