--- a/index.html
+++ b/index.html
@@ -14,26 +14,24 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: #000;
       color: #fff;
+      overflow: hidden; /* no scrollbars */
     }
 
-  .map-container {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .map-container img {
-    max-width: 100%;
-    max-height: 100%;
-    height: auto;
-    width: auto;
-    display: block;
-  }
+    /* MAP FULLSCREEN */
+    .map-container {
+      position: fixed;
+      inset: 0; /* top/right/bottom/left = 0 */
+      overflow: hidden;
+    }
 
+    .map-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* zooms image to cover the whole viewport */
+      display: block;
+    }
+
+    /* HOTSPOTS */
     .hotspot {
       position: absolute;
       width: 32px;
@@ -47,7 +45,10 @@
       cursor: pointer;
       backdrop-filter: blur(4px);
       -webkit-backdrop-filter: blur(4px);
-      transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
+      transition:
+        transform 0.2s ease,
+        box-shadow 0.2s ease,
+        background-color 0.2s ease;
     }
 
     .hotspot::after {
@@ -64,6 +65,7 @@
       background-color: rgba(255, 255, 255, 0.3);
     }
 
+    /* NOW PLAYING LABEL */
     #now-playing {
       position: fixed;
       left: 1rem;
@@ -72,33 +74,70 @@
       border-radius: 999px;
       background: rgba(0, 0, 0, 0.6);
       font-size: 0.85rem;
+      max-width: calc(100vw - 2rem);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   </style>
 </head>
 <body>
   <div class="map-container">
-    <!-- YOUR MAP IMAGE -->
+    <!-- CHANGE src IF YOUR FILE HAS A DIFFERENT NAME -->
     <img src="images/your-map.png" alt="Digital poetry sound map" />
 
-    <!-- HOTSPOTS (example with 2 points) -->
-    <!-- Move them by changing top / left percentages -->
-
+    <!-- 7 HOTSPOTS ALONG THE PATH – all play poem1.wav -->
     <button
       class="hotspot"
-      style="top: 30%; left: 40%;"
+      style="top: 8%; left: 70%;"
       data-audio="audio/poem1.wav"
-      data-title="Poem 1 – North"
+      data-title="Poem – Point 1"
     ></button>
 
     <button
       class="hotspot"
-      style="top: 65%; left: 70%;"
+      style="top: 20%; left: 63%;"
       data-audio="audio/poem1.wav"
-      data-title="Poem 2 – South-East"
+      data-title="Poem – Point 2"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 32%; left: 55%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 3"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 44%; left: 47%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 4"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 56%; left: 45%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 5"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 68%; left: 48%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 6"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 80%; left: 52%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 7"
     ></button>
   </div>
 
-  <div id="now-playing">Click a dot to listen.</div>
+  <div id="now-playing">Click a point on the path to listen.</div>
 
   <!-- Hidden audio player -->
   <audio id="player"></audio>
@@ -113,7 +152,7 @@
         const src = spot.dataset.audio;
         const title = spot.dataset.title || "Untitled poem";
 
-        // if already playing this one, toggle pause
+        // If already playing this one, toggle pause
         if (player.src.includes(src) && !player.paused) {
           player.pause();
           nowPlaying.textContent = "Paused: " + title;
@@ -126,7 +165,7 @@
     });
 
     player.addEventListener("ended", () => {
-      nowPlaying.textContent = "Click a dot to listen.";
+      nowPlaying.textContent = "Click a point on the path to listen.";
     });
   </script>
 </body>
