--- a/index.html
+++ b/index.html
@@ -14,26 +14,24 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: #000;
       color: #fff;
-      overflow: hidden;
+      overflow: hidden; /* no scrollbars */
     }
 
+    /* MAP FULLSCREEN */
     .map-container {
       position: fixed;
-      inset: 0;
+      inset: 0; /* top/right/bottom/left = 0 */
       overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
 
     .map-container img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: cover; /* zooms image to cover the whole viewport */
       display: block;
-      transform: rotate(90deg);
     }
 
+    /* HOTSPOTS */
     .hotspot {
       position: absolute;
       width: 32px;
@@ -51,7 +49,6 @@
         transform 0.2s ease,
         box-shadow 0.2s ease,
         background-color 0.2s ease;
-      z-index: 10;
     }
 
     .hotspot::after {
@@ -63,11 +60,12 @@
     }
 
     .hotspot:hover {
-      transform: scale(1.3);
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.9);
-      background-color: rgba(255, 255, 255, 0.4);
+      transform: scale(1.1);
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
+      background-color: rgba(255, 255, 255, 0.3);
     }
 
+    /* NOW PLAYING LABEL */
     #now-playing {
       position: fixed;
       left: 1rem;
@@ -80,67 +78,60 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      z-index: 20;
     }
   </style>
 </head>
 <body>
   <div class="map-container">
-    <img src="https://vioanl.github.io/digital-poetry-map/images/your-map.png" alt="Digital poetry sound map" />
+    <!-- CHANGE src IF YOUR FILE HAS A DIFFERENT NAME -->
+    <img src="images/your-map.png" alt="Digital poetry sound map" />
 
-    <!-- Hotspots positioned along the yellow path (after rotation) -->
-    <!-- Top of yellow line -->
+    <!-- 7 HOTSPOTS ALONG THE PATH – all play poem1.wav -->
     <button
       class="hotspot"
-      style="top: 15%; left: 75%;"
+      style="top: 8%; left: 70%;"
       data-audio="audio/poem1.wav"
       data-title="Poem – Point 1"
     ></button>
 
-    <!-- First turn -->
     <button
       class="hotspot"
-      style="top: 25%; left: 68%;"
+      style="top: 20%; left: 63%;"
       data-audio="audio/poem1.wav"
       data-title="Poem – Point 2"
     ></button>
 
-    <!-- Second turn -->
     <button
       class="hotspot"
-      style="top: 35%; left: 58%;"
+      style="top: 32%; left: 55%;"
       data-audio="audio/poem1.wav"
       data-title="Poem – Point 3"
     ></button>
 
-    <!-- Middle section -->
     <button
       class="hotspot"
-      style="top: 48%; left: 52%;"
+      style="top: 44%; left: 47%;"
       data-audio="audio/poem1.wav"
       data-title="Poem – Point 4"
     ></button>
 
-    <!-- Lower middle -->
     <button
       class="hotspot"
-      style="top: 58%; left: 48%;"
+      style="top: 56%; left: 45%;"
       data-audio="audio/poem1.wav"
       data-title="Poem – Point 5"
     ></button>
 
-    <!-- Near bottom turn -->
     <button
       class="hotspot"
-      style="top: 70%; left: 45%;"
+      style="top: 68%; left: 48%;"
       data-audio="audio/poem1.wav"
       data-title="Poem – Point 6"
     ></button>
 
-    <!-- Bottom of path -->
     <button
       class="hotspot"
-      style="top: 82%; left: 38%;"
+      style="top: 80%; left: 52%;"
       data-audio="audio/poem1.wav"
       data-title="Poem – Point 7"
     ></button>
@@ -148,6 +139,7 @@
 
   <div id="now-playing">Click a point on the path to listen.</div>
 
+  <!-- Hidden audio player -->
   <audio id="player"></audio>
 
   <script>
@@ -160,6 +152,7 @@
         const src = spot.dataset.audio;
         const title = spot.dataset.title || "Untitled poem";
 
+        // If already playing this one, toggle pause
         if (player.src.includes(src) && !player.paused) {
           player.pause();
           nowPlaying.textContent = "Paused: " + title;
@@ -177,3 +170,4 @@
   </script>
 </body>
 </html>
+
