--- a/index.html
+++ b/index.html
@@ -14,24 +14,20 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: #000;
       color: #fff;
-      overflow: hidden;
+      overflow: hidden; /* no scrollbars, map fills page */
     }
 
     .map-container {
       position: fixed;
-      inset: 0;
+      inset: 0; /* top:0; right:0; bottom:0; left:0 */
       overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
 
     .map-container img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: cover; /* zoom the image to cover whole screen */
       display: block;
-      transform: rotate(90deg) translateY(-8%);
     }
 
     .hotspot {
@@ -47,133 +43,9 @@
       cursor: pointer;
       backdrop-filter: blur(4px);
       -webkit-backdrop-filter: blur(4px);
-      transition:
-        transform 0.2s ease,
-        box-shadow 0.2s ease,
-        background-color 0.2s ease;
-      z-index: 10;
+      transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
     }
 
     .hotspot::after {
       content: "";
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background: #fff;
-    }
-
-    .hotspot:hover {
-      transform: scale(1.3);
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.9);
-      background-color: rgba(255, 255, 255, 0.4);
-    }
-
-    #now-playing {
-      position: fixed;
-      left: 1rem;
-      bottom: 1rem;
-      padding: 0.5rem 0.9rem;
-      border-radius: 999px;
-      background: rgba(0, 0, 0, 0.6);
-      font-size: 0.85rem;
-      max-width: calc(100vw - 2rem);
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      z-index: 20;
-    }
-  </style>
-</head>
-<body>
-  <div class="map-container">
-    <img src="https://vioanl.github.io/digital-poetry-map/images/your-map.png" alt="Digital poetry sound map" />
-
-    <!-- Hotspots positioned along the yellow path (after rotation) -->
-    <!-- Top of yellow line -->
-    <button
-      class="hotspot"
-      style="top: 8%; left: 82%;"
-      data-audio="audio/poem1.wav"
-      data-title="Poem – Point 1"
-    ></button>
-
-    <!-- First turn -->
-    <button
-      class="hotspot"
-      style="top: 20%; left: 72%;"
-      data-audio="audio/poem1.wav"
-      data-title="Poem – Point 2"
-    ></button>
-
-    <!-- Second turn -->
-    <button
-      class="hotspot"
-      style="top: 32%; left: 60%;"
-      data-audio="audio/poem1.wav"
-      data-title="Poem – Point 3"
-    ></button>
-
-    <!-- Middle section -->
-    <button
-      class="hotspot"
-      style="top: 45%; left: 51%;"
-      data-audio="audio/poem1.wav"
-      data-title="Poem – Point 4"
-    ></button>
-
-    <!-- Lower middle -->
-    <button
-      class="hotspot"
-      style="top: 58%; left: 46%;"
-      data-audio="audio/poem1.wav"
-      data-title="Poem – Point 5"
-    ></button>
-
-    <!-- Near bottom turn -->
-    <button
-      class="hotspot"
-      style="top: 72%; left: 42%;"
-      data-audio="audio/poem1.wav"
-      data-title="Poem – Point 6"
-    ></button>
-
-    <!-- Bottom of path -->
-    <button
-      class="hotspot"
-      style="top: 88%; left: 36%;"
-      data-audio="audio/poem1.wav"
-      data-title="Poem – Point 7"
-    ></button>
-  </div>
-
-  <div id="now-playing">Click a point on the path to listen.</div>
-
-  <audio id="player"></audio>
-
-  <script>
-    const hotspots = document.querySelectorAll(".hotspot");
-    const player = document.getElementById("player");
-    const nowPlaying = document.getElementById("now-playing");
-
-    hotspots.forEach((spot) => {
-      spot.addEventListener("click", () => {
-        const src = spot.dataset.audio;
-        const title = spot.dataset.title || "Untitled poem";
-
-        if (player.src.includes(src) && !player.paused) {
-          player.pause();
-          nowPlaying.textContent = "Paused: " + title;
-        } else {
-          player.src = src;
-          player.play();
-          nowPlaying.textContent = "Now playing: " + title;
-        }
-      });
-    });
-
-    player.addEventListener("ended", () => {
-      nowPlaying.textContent = "Click a point on the path to listen.";
-    });
-  </script>
-</body>
-</html>
+      width: 10px
