--- a/index.html
+++ b/index.html
@@ -14,22 +14,24 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: #000;
       color: #fff;
-      overflow: hidden; /* no scrollbars, map fills page */
+      overflow: hidden; /* no scrollbars */
     }
 
+    /* MAP FULLSCREEN */
     .map-container {
       position: fixed;
-      inset: 0; /* top:0; right:0; bottom:0; left:0 */
+      inset: 0; /* top/right/bottom/left = 0 */
       overflow: hidden;
     }
 
     .map-container img {
       width: 100%;
       height: 100%;
-      object-fit: cover; /* zoom the image to cover whole screen */
+      object-fit: cover; /* zooms image to cover the whole viewport */
       display: block;
     }
 
+    /* HOTSPOTS */
     .hotspot {
       position: absolute;
       width: 32px;
@@ -43,10 +45,128 @@
       cursor: pointer;
       backdrop-filter: blur(4px);
       -webkit-backdrop-filter: blur(4px);
-      transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
+      transition:
+        transform 0.2s ease,
+        box-shadow 0.2s ease,
+        background-color 0.2s ease;
     }
 
     .hotspot::after {
       content: "";
-      width: 10px
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: #fff;
+    }
 
+    .hotspot:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+
+    /* NOW PLAYING LABEL */
+    #now-playing {
+      position: fixed;
+      left: 1rem;
+      bottom: 1rem;
+      padding: 0.5rem 0.9rem;
+      border-radius: 999px;
+      background: rgba(0, 0, 0, 0.6);
+      font-size: 0.85rem;
+      max-width: calc(100vw - 2rem);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  </style>
+</head>
+<body>
+  <div class="map-container">
+    <!-- CHANGE src IF YOUR FILE HAS A DIFFERENT NAME -->
+    <img src="images/your-map.png" alt="Digital poetry sound map" />
+
+    <!-- 7 HOTSPOTS ALONG THE PATH – all play poem1.wav -->
+    <button
+      class="hotspot"
+      style="top: 8%; left: 70%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 1"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 20%; left: 63%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 2"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 32%; left: 55%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 3"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 44%; left: 47%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 4"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 56%; left: 45%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 5"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 68%; left: 48%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 6"
+    ></button>
+
+    <button
+      class="hotspot"
+      style="top: 80%; left: 52%;"
+      data-audio="audio/poem1.wav"
+      data-title="Poem – Point 7"
+    ></button>
+  </div>
+
+  <div id="now-playing">Click a point on the path to listen.</div>
+
+  <!-- Hidden audio player -->
+  <audio id="player"></audio>
+
+  <script>
+    const hotspots = document.querySelectorAll(".hotspot");
+    const player = document.getElementById("player");
+    const nowPlaying = document.getElementById("now-playing");
+
+    hotspots.forEach((spot) => {
+      spot.addEventListener("click", () => {
+        const src = spot.dataset.audio;
+        const title = spot.dataset.title || "Untitled poem";
+
+        // If already playing this one, toggle pause
+        if (player.src.includes(src) && !player.paused) {
+          player.pause();
+          nowPlaying.textContent = "Paused: " + title;
+        } else {
+          player.src = src;
+          player.play();
+          nowPlaying.textContent = "Now playing: " + title;
+        }
+      });
+    });
+
+    player.addEventListener("ended", () => {
+      nowPlaying.textContent = "Click a point on the path to listen.";
+    });
+  </script>
+</body>
+</html>
