--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     .map-container img {
       width: 100%;
       height: 100%;
-      object-fit: cover; /* zooms image to cover the whole viewport */
+      object-position: center 40%; /* zooms image to cover the whole viewport */
       display: block;
     }
 
@@ -170,3 +170,4 @@
   </script>
 </body>
 </html>
+
