--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      object-position: center 40%;/* zooms image to cover the whole viewport */
+      /* object-position: center 40%;  zooms image to cover the whole viewport */
       display: block;
     }
 
@@ -46,10 +46,7 @@
       cursor: pointer;
       backdrop-filter: blur(4px);
       -webkit-backdrop-filter: blur(4px);
-      transition:
-        transform 0.2s ease,
-        box-shadow 0.2s ease,
-        background-color 0.2s ease;
+      transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
     }
 
     .hotspot::after {
@@ -84,6 +81,7 @@
 </head>
 <body>
   <div class="map-container">
+
     <!-- CHANGE src IF YOUR FILE HAS A DIFFERENT NAME -->
     <img src="images/your-map.png" alt="Digital poetry sound map" />
 
@@ -136,6 +134,7 @@
       data-audio="audio/poem1.wav"
       data-title="Poem – Point 7"
     ></button>
+
   </div>
 
   <div id="now-playing">Click a point on the path to listen.</div>
