--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      /* object-position: center 40%;  zooms image to cover the whole viewport */
+      object-position: center 40%;  
       display: block;
     }
 
@@ -170,3 +170,4 @@
   </script>
 </body>
 </html>
+
