--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     .map-container img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      object-position: center 30%; 
+      /* object-fit: cover; */
+      object-position: center 40%; 
       display: block;
     }
 
@@ -170,5 +170,6 @@
   </script>
 </body>
 </html>
+
 
 
