--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
       
     </p>
 
-    <a href="index.html" class="back-button">← Return to Mission Path</a>
+    <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← Return to Mission Path</a>
   </div>
 </body>
 </html>
