--- a/water.html
+++ b/water.html
@@ -1,1 +1,139 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Waypoint 1: Water - Unit 33321</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Share+Tech+Mono&display=swap');
 
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Courier Prime', 'Courier New', monospace;
+      background: #0d0208;
+      color: #00ff41;
+      overflow: hidden;
+    }
+
+    .video-container {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #000;
+    }
+
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      padding: 2rem;
+      background: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
+      z-index: 10;
+    }
+
+    .waypoint-title {
+      font-family: 'Share Tech Mono', monospace;
+      font-size: 2rem;
+      color: #00ff41;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      text-shadow: 0 0 10px rgba(0, 255, 65, 0.8);
+      margin: 0;
+    }
+
+    .waypoint-subtitle {
+      font-size: 1rem;
+      color: #39ff14;
+      margin-top: 0.5rem;
+    }
+
+    .back-button {
+      position: fixed;
+      bottom: 2rem;
+      left: 2rem;
+      padding: 0.75rem 1.5rem;
+      background: rgba(0, 255, 65, 0.1);
+      border: 2px solid #00ff41;
+      color: #00ff41;
+      text-decoration: none;
+      font-family: 'Share Tech Mono', monospace;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      transition: all 0.2s ease;
+      z-index: 10;
+      backdrop-filter: blur(10px);
+    }
+
+    .back-button:hover {
+      background: rgba(0, 255, 65, 0.2);
+      box-shadow: 0 0 15px rgba(0, 255, 65, 0.5);
+      transform: translateX(-5px);
+    }
+
+    .audio-status {
+      position: fixed;
+      bottom: 2rem;
+      right: 2rem;
+      padding: 0.5rem 1rem;
+      background: rgba(0, 0, 0, 0.8);
+      border: 1px solid #00ff41;
+      color: #00ff41;
+      font-size: 0.85rem;
+      z-index: 10;
+      backdrop-filter: blur(10px);
+    }
+  </style>
+</head>
+<body>
+  <div class="video-container">
+    <!-- Replace with your video file -->
+    <video autoplay loop muted playsinline>
+      <source src="videos/water.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <div class="overlay">
+    <h1 class="waypoint-title">WAYPOINT 1: WATER</h1>
+    <p class="waypoint-subtitle">Sensory Log - Unit 33321</p>
+  </div>
+
+  <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
+  
+  <div class="audio-status">AUDIO LOG PLAYING</div>
+
+  <!-- Auto-playing audio -->
+  <audio id="audio-player" autoplay>
+    <source src="audio/water.wav" type="audio/wav">
+    <source src="audio/water.mp3" type="audio/mpeg">
+  </audio>
+
+  <script>
+    const audio = document.getElementById('audio-player');
+    const status = document.querySelector('.audio-status');
+
+    // Update status when audio ends
+    audio.addEventListener('ended', () => {
+      status.textContent = 'AUDIO LOG COMPLETE';
+    });
+
+    // Handle audio errors
+    audio.addEventListener('error', () => {
+      status.textContent = 'AUDIO LOG ERROR';
+    });
+  </script>
+</body>
+</html>
