Change hotspots to link to specific waypoints
Updated hotspots to link to individual pages for each waypoint.

--- a/index.html
+++ b/index.html
@@ -114,54 +114,54 @@
     <!-- CHANGE src IF YOUR FILE HAS A DIFFERENT NAME -->
     <img src="images/your-map.png" alt="Digital poetry sound map" />
 
-    <!-- 7 HOTSPOTS ALONG THE PATH – all play poem1.wav -->
+    <!-- 7 HOTSPOTS ALONG THE PATH – each links to its own page -->
     <button
     class="hotspot"
     style="top: 61%; left: 23%;"
-    data-audio="audio/poem1.wav"
-    data-title="Poem – Point 1"
+    onclick="window.location.href='water.html'"
+    data-title="Waypoint 1: Water"
     ></button>
-
+  
   <button
     class="hotspot"
     style="top: 54%; left: 32%;"
-    data-audio="audio/poem1.wav"
-    data-title="Poem – Point 2"
+    onclick="window.location.href='wind.html'"
+    data-title="Waypoint 2: Wind"
   ></button>
-
+  
   <button
     class="hotspot"
     style="top: 53%; left: 43%;"
-    data-audio="audio/poem1.wav"
-    data-title="Poem – Point 3"
+    onclick="window.location.href='light.html'"
+    data-title="Waypoint 3: Light"
   ></button>
-
+  
   <button
     class="hotspot"
     style="top: 55%; left: 54%;"
-    data-audio="audio/poem1.wav"
-    data-title="Poem – Point 4"
+    onclick="window.location.href='texture.html'"
+    data-title="Waypoint 4: Texture"
   ></button>
-
+  
   <button
     class="hotspot"
     style="top: 59%; left: 63%;"
-    data-audio="audio/poem1.wav"
-    data-title="Poem – Point 5"
+    onclick="window.location.href='living.html'"
+    data-title="Waypoint 5: Living Things"
   ></button>
-
+  
   <button
     class="hotspot"
     style="top: 58%; left: 73%;"
-    data-audio="audio/poem1.wav"
-    data-title="Poem – Point 6"
+    onclick="window.location.href='voices.html'"
+    data-title="Waypoint 6: Human Voices"
   ></button>
-
+  
   <button
     class="hotspot"
     style="top: 62%; left: 84%;"
-    data-audio="audio/poem1.wav"
-    data-title="Poem – Point 7"
+    onclick="window.location.href='self.html'"
+    data-title="Waypoint 7: Self-Recognition"
   ></button>
 
   </div>
