--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #000;
+      background: ##2b2b2b; /;
       color: #fff;
       overflow: hidden; /* no scrollbars */
     }
@@ -202,3 +202,4 @@
   </script>
 </body>
 </html>
+
