--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     body {
       margin: 0;
       font-family: 'Courier Prime', 'Courier New', monospace;
-      background: #2b2b2b; 
+      background: #0d0208; 
       color: #00ff41;
       padding: 2rem;
       line-height: 1.6;
