--- a/water.html
+++ b/water.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Waypoint 1: Water - Unit 33321</title>
+  <title>Memory 1: Water - Unit 33321</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Share+Tech+Mono&display=swap');
@@ -99,8 +99,9 @@
 </head>
 <body>
   <div class="video-container">
-    <!-- Replace with your video file -->
+    <!-- Your water.mov video -->
     <video autoplay loop muted playsinline>
+      <source src="videos/water.mov" type="video/quicktime">
       <source src="videos/water.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
