--- a/water.html
+++ b/water.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Memory 1: Water - Unit 33321</title>
+  <title>Waypoint 1: Water - Unit 33321</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Share+Tech+Mono&display=swap');
@@ -14,8 +14,8 @@
     body {
       margin: 0;
       font-family: 'Courier Prime', 'Courier New', monospace;
-      background: #0d0208;
-      color: #00ff41;
+      background: #ffffff;
+      color: #d73a49;
       overflow: hidden;
     }
 
@@ -25,7 +25,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #000;
+      background: #fff;
     }
 
     video {
@@ -40,23 +40,22 @@
       left: 0;
       right: 0;
       padding: 2rem;
-      background: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
+      background: linear-gradient(180deg, rgba(255,255,255,0.95) 0%, rgba(255,255,255,0) 100%);
       z-index: 10;
     }
 
     .waypoint-title {
       font-family: 'Share Tech Mono', monospace;
       font-size: 2rem;
-      color: #00ff41;
+      color: #005cc5;
       text-transform: uppercase;
       letter-spacing: 0.1em;
-      text-shadow: 0 0 10px rgba(0, 255, 65, 0.8);
       margin: 0;
     }
 
     .waypoint-subtitle {
       font-size: 1rem;
-      color: #39ff14;
+      color: #6f42c1;
       margin-top: 0.5rem;
     }
 
@@ -65,9 +64,9 @@
       bottom: 2rem;
       left: 2rem;
       padding: 0.75rem 1.5rem;
-      background: rgba(0, 255, 65, 0.1);
-      border: 2px solid #00ff41;
-      color: #00ff41;
+      background: rgba(0, 92, 197, 0.1);
+      border: 2px solid #005cc5;
+      color: #005cc5;
       text-decoration: none;
       font-family: 'Share Tech Mono', monospace;
       text-transform: uppercase;
@@ -78,8 +77,8 @@
     }
 
     .back-button:hover {
-      background: rgba(0, 255, 65, 0.2);
-      box-shadow: 0 0 15px rgba(0, 255, 65, 0.5);
+      background: rgba(0, 92, 197, 0.2);
+      box-shadow: 0 0 15px rgba(0, 92, 197, 0.3);
       transform: translateX(-5px);
     }
 
@@ -88,9 +87,9 @@
       bottom: 2rem;
       right: 2rem;
       padding: 0.5rem 1rem;
-      background: rgba(0, 0, 0, 0.8);
-      border: 1px solid #00ff41;
-      color: #00ff41;
+      background: rgba(255, 255, 255, 0.95);
+      border: 1px solid #005cc5;
+      color: #005cc5;
       font-size: 0.85rem;
       z-index: 10;
       backdrop-filter: blur(10px);
