--- a/water.html
+++ b/water.html
@@ -35,7 +35,7 @@
     video {
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: cover;
       background: #ffffff;
     }
 
