Enforce white background and adjust video styles
Updated CSS styles to enforce a white background and modified video object-fit property.

--- a/water.html
+++ b/water.html
@@ -14,7 +14,7 @@
     body {
       margin: 0;
       font-family: 'Courier Prime', 'Courier New', monospace;
-      background: #ffffff;
+      background: #ffffff !important;
       color: #d73a49;
       overflow: hidden;
       width: 100vw;
@@ -27,7 +27,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #ffffff;
+      background: #ffffff !important;
       width: 100%;
       height: 100%;
     }
@@ -35,8 +35,20 @@
     video {
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      background: #ffffff;
+      object-fit: contain;
+      background: #ffffff !important;
+    }
+    
+    /* Force everything to white background */
+    * {
+      background-color: #ffffff;
+    }
+    
+    /* Except elements that need transparency */
+    .overlay,
+    .back-button,
+    .audio-status {
+      background-color: rgba(255, 255, 255, 0.95) !important;
     }
 
     .overlay {
