--- a/water.html
+++ b/water.html
@@ -9,17 +9,14 @@
 
     * {
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
     }
 
     body {
+      margin: 0;
       font-family: 'Courier Prime', 'Courier New', monospace;
-      background: #ffffff;
-      color: #d73a49;
+      background: #0d0208;
+      color: #00ff41;
       overflow: hidden;
-      width: 100vw;
-      height: 100vh;
     }
 
     .video-container {
@@ -28,112 +25,85 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #ffffff;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
+      background: #000;
     }
 
     video {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain;
-
-      /* Make the black-rendered video feel white-rendered */
-      filter: invert(1) hue-rotate(180deg) contrast(1.5) brightness(1.25);
-
-      background: transparent;
-
-      /* Soft edge fade so the video blends into the white page (no visible rectangle) */
-      -webkit-mask-image: radial-gradient(
-        circle,
-        rgba(0,0,0,1) 60%,
-        rgba(0,0,0,0.8) 70%,
-        rgba(0,0,0,0) 85%
-      );
-
-      mask-image: radial-gradient(
-        circle,
-        rgba(0,0,0,1) 60%,
-        rgba(0,0,0,0.8) 70%,
-        rgba(0,0,0,0) 85%
-      );
-    }
-
-    /* UI ELEMENTS */
-    .overlay, .back-button, .audio-status {
-      z-index: 10;
-      position: fixed;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     .overlay {
+      position: fixed;
       top: 0;
       left: 0;
       right: 0;
       padding: 2rem;
-      /* Softer gradient so it doesn't create a harsh band */
-      background: linear-gradient(
-        180deg,
-        rgba(255,255,255,0.75) 0%,
-        rgba(255,255,255,0.15) 40%,
-        rgba(255,255,255,0) 100%
-      );
+      background: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
+      z-index: 10;
     }
 
     .waypoint-title {
       font-family: 'Share Tech Mono', monospace;
       font-size: 2rem;
-      color: #005cc5;
+      color: #00ff41;
       text-transform: uppercase;
       letter-spacing: 0.1em;
+      text-shadow: 0 0 10px rgba(0, 255, 65, 0.8);
       margin: 0;
     }
 
     .waypoint-subtitle {
       font-size: 1rem;
-      color: #6f42c1;
+      color: #39ff14;
       margin-top: 0.5rem;
     }
 
     .back-button {
+      position: fixed;
       bottom: 2rem;
       left: 2rem;
       padding: 0.75rem 1.5rem;
-      background: rgba(255, 255, 255, 0.85);
-      border: 2px solid #005cc5;
-      color: #005cc5;
+      background: rgba(0, 255, 65, 0.1);
+      border: 2px solid #00ff41;
+      color: #00ff41;
       text-decoration: none;
       font-family: 'Share Tech Mono', monospace;
       text-transform: uppercase;
       letter-spacing: 0.1em;
       transition: all 0.2s ease;
+      z-index: 10;
+      backdrop-filter: blur(10px);
     }
 
     .back-button:hover {
-      background: #005cc5;
-      color: #ffffff;
+      background: rgba(0, 255, 65, 0.2);
+      box-shadow: 0 0 15px rgba(0, 255, 65, 0.5);
       transform: translateX(-5px);
     }
 
     .audio-status {
+      position: fixed;
       bottom: 2rem;
       right: 2rem;
       padding: 0.5rem 1rem;
-      background: rgba(255, 255, 255, 0.85);
-      border: 1px solid #005cc5;
-      color: #005cc5;
+      background: rgba(0, 0, 0, 0.8);
+      border: 1px solid #00ff41;
+      color: #00ff41;
       font-size: 0.85rem;
+      z-index: 10;
+      backdrop-filter: blur(10px);
     }
   </style>
 </head>
 <body>
-
   <div class="video-container">
+    <!-- Your water.mov video -->
     <video autoplay loop muted playsinline>
-      <!-- Prefer MP4 for GitHub Pages / browsers -->
-      <source src="videos/water.mp4" type="video/mp4">
-      <!-- MOV is often not served/played reliably on the web -->
       <source src="videos/water.mov" type="video/quicktime">
+      <source src="videos/water.mp4" type="video/mp4">
+      Your browser does not support the video tag.
     </video>
   </div>
 
@@ -143,9 +113,10 @@
   </div>
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
-
+  
   <div class="audio-status">AUDIO LOG PLAYING</div>
 
+  <!-- Auto-playing audio -->
   <audio id="audio-player" autoplay>
     <source src="audio/water.wav" type="audio/wav">
     <source src="audio/water.mp3" type="audio/mpeg">
@@ -155,10 +126,12 @@
     const audio = document.getElementById('audio-player');
     const status = document.querySelector('.audio-status');
 
+    // Update status when audio ends
     audio.addEventListener('ended', () => {
       status.textContent = 'AUDIO LOG COMPLETE';
     });
 
+    // Handle audio errors
     audio.addEventListener('error', () => {
       status.textContent = 'AUDIO LOG ERROR';
     });
