--- a/wind.html
+++ b/wind.html
@@ -53,7 +53,7 @@
     .waypoint-title {
       font-family: 'Share Tech Mono', monospace;
       font-size: 2rem;
-      color: #005cc5;
+      color: #808080;
       text-transform: uppercase;
       letter-spacing: 0.1em;
       margin: 0;
@@ -61,7 +61,7 @@
 
     .waypoint-subtitle {
       font-size: 1rem;
-      color: #6f42c1;
+      color: #cc7832;
       margin-top: 0.5rem;
     }
 
@@ -70,9 +70,9 @@
       bottom: 2rem;
       left: 2rem;
       padding: 0.75rem 1.5rem;
-      background: rgba(0, 92, 197, 0.1);
-      border: 2px solid #005cc5;
-      color: #005cc5;
+      background: rgba(204, 120, 50, 0.1);
+      border: 2px solid #cc7832;
+      color: #cc7832;
       text-decoration: none;
       font-family: 'Share Tech Mono', monospace;
       text-transform: uppercase;
@@ -83,8 +83,8 @@
     }
 
     .back-button:hover {
-      background: rgba(0, 92, 197, 0.2);
-      box-shadow: 0 0 15px rgba(0, 92, 197, 0.3);
+      background: rgba(204, 120, 50, 0.2);
+      box-shadow: 0 0 15px rgba(204, 120, 50, 0.3);
       transform: translateX(-5px);
     }
 
@@ -94,8 +94,8 @@
       right: 2rem;
       padding: 0.5rem 1rem;
       background: rgba(255, 255, 255, 0.95);
-      border: 1px solid #005cc5;
-      color: #005cc5;
+      border: 1px solid #cc7832;
+      color: #cc7832;
       font-size: 0.85rem;
       z-index: 10;
       backdrop-filter: blur(10px);
