Rename waypoint to memory in wind.html

--- a/wind.html
+++ b/wind.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Waypoint 2: Wind - Unit 33321</title>
+  <title>Memory 2: Wind - Unit 33321</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Share+Tech+Mono&display=swap');
@@ -50,7 +50,7 @@
       z-index: 10;
     }
 
-    .waypoint-title {
+    .Memory-title {
       font-family: 'Share Tech Mono', monospace;
       font-size: 2rem;
       color: #808080;
@@ -59,7 +59,7 @@
       margin: 0;
     }
 
-    .waypoint-subtitle {
+    .Memory-subtitle {
       font-size: 1rem;
       color: #cc7832;
       margin-top: 0.5rem;
@@ -113,8 +113,8 @@
   </div>
 
   <div class="overlay">
-    <h1 class="waypoint-title">WAYPOINT 2: WIND</h1>
-    <p class="waypoint-subtitle">Sensory Log - Unit 33321</p>
+    <h1 class="Memory-title">Memory 2: WIND</h1>
+    <p class="Memory-subtitle">Sensory Log - Unit 33321</p>
   </div>
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
