--- a/living.html
+++ b/living.html
@@ -15,7 +15,7 @@
       margin: 0;
       font-family: 'Courier Prime', 'Courier New', monospace;
       /* PyCharm Dark Background */
-      background: #2b2b2b; 
+      background: ##ffffff; 
       /* Standard Editor Text Color */
       color: #a9b7c6; 
       overflow: hidden;
