Rename Waypoint to Memory in living.html

--- a/living.html
+++ b/living.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Waypoint 5: Life - Unit 33321</title>
+  <title>Memory 5: Life - Unit 33321</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Share+Tech+Mono&display=swap');
@@ -52,7 +52,7 @@
       z-index: 10;
     }
 
-    .waypoint-title {
+    .Memory-title {
       font-family: 'Share Tech Mono', monospace;
       font-size: 2rem;
       /* VIVID ORANGE (Readable on White) */
@@ -62,7 +62,7 @@
       margin: 0;
     }
 
-    .waypoint-subtitle {
+    .Memory-subtitle {
       font-size: 1rem;
       /* VIVID GREEN (Readable on White) */
       color: #38761d;
@@ -117,8 +117,8 @@
   </div>
 
   <div class="overlay">
-    <h1 class="waypoint-title">WAYPOINT 3: LIFE</h1>
-    <p class="waypoint-subtitle">Sensory Log - Unit 33321</p>
+    <h1 class="Memory-title">Memory 5: LIFE</h1>
+    <p class="Memory-subtitle">Sensory Log - Unit 33321</p>
   </div>
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
