--- a/water.html
+++ b/water.html
@@ -118,6 +118,12 @@
   </div>
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
+
+  <div class="mission-comment">
+    <div class="mission-comment-title">Mission Log Entry 001</div>
+    <p>First contact with aqueous substance. Sensors detect molecular structure H₂O. Temperature: variable. Behavior: fluid, unpredictable. Unit experiences novel sensation—classification unknown. Preliminary designation: "wetness." Systems report no malfunction, yet processing algorithms generate unexpected subroutines. Query: Is this... wonder?</p>
+  </div>
+  
   
   <div class="audio-status">AUDIO LOG PLAYING</div>
 
