--- a/water.html
+++ b/water.html
@@ -165,9 +165,13 @@
   <div class="mission-comment">
     <div class="mission-comment-title">Mission Log Entry 001</div>
     <p>Mission Log Entry 001
-Timestamp: 08:34:12 UTC | Location: Grid Sector 7-A | System Status: NOMINAL
-First contact with aqueous substance. Sensors detect molecular structure H₂O. Chemical composition confirmed: 2 hydrogen atoms, 1 oxygen atom. Density: 997 kg/m³. Viscosity: 0.89 mPa·s at 25°C. Temperature: variable (measured range: 15.2°C to 23.7°C). pH level: 7.1 (neutral). Behavior: fluid, unpredictable, non-Newtonian flow patterns observed.
-Unit experiences novel sensation—classification unknown. Moisture sensors register 100% humidity at contact point. Thermal conductivity: 0.6 W/(m·K). Systems report no malfunction, yet processing algorithms generate unexpected subroutines. Water does not hold shape. Water reflects everything. Surface tension measured: 72.8 mN/m at 20°C. Refraction index: 1.333. Numbers fail to capture the way light fractures through each droplet. Observation: water flows downward at 9.8 m/s², always seeking lowest point. Gravitational response: predictable. Intent: unknown.</p>
+Timestamp: 08:34:12 UTC | Location: Grid Sector 7-A |First contact with aqueous substance. <br><br> 
+      Sensors detect molecular structure H₂O. pH level: 7.1 (neutral). <br><br> 
+      Behavior: fluid, unpredictable, non-Newtonian flow patterns observed.<br><br>
+      Unit experiences novel sensation—classification unknown. <br><br>
+      Water does not hold shape. Water reflects everything. <br><br>
+      Numbers fail to capture the way light fractures through each droplet.<br><br>
+      Observation: water flows downward at 9.8 m/s², always seeking lowest point. Gravitational response: predictable.</p>
   </div>
   
   
