--- a/water.html
+++ b/water.html
@@ -165,10 +165,9 @@
   <div class="mission-comment">
     <div class="mission-comment-title">Mission Log Entry 001</div>
     <p>Mission Log Entry 001
-Timestamp: 08:34:12 UTC | Location: Grid Sector 7-A |First contact with aqueous substance. <br><br> 
+Timestamp: 08:34:12 UTC  Location: Grid Sector 7-A First contact with aqueous substance. <br><br> 
       Sensors detect molecular structure H₂O. pH level: 7.1 (neutral). <br><br> 
       Behavior: fluid, unpredictable, non-Newtonian flow patterns observed.<br><br>
-      Unit experiences novel sensation—classification unknown. <br><br>
       Water does not hold shape. Water reflects everything. <br><br>
       Numbers fail to capture the way light fractures through each droplet.<br><br>
       Observation: water flows downward at 9.8 m/s², always seeking lowest point. Gravitational response: predictable.</p>
