--- a/water.html
+++ b/water.html
@@ -164,8 +164,7 @@
 
   <div class="mission-comment">
     <div class="mission-comment-title">Mission Log Entry 001</div>
-    <p>Mission Log Entry 001
-Timestamp: 08:34:12 UTC  Location: Grid Sector 7-A First contact with aqueous substance. <br><br> 
+    <p>Timestamp: 08:34:12 UTC  Location: Grid Sector 7-A First contact with aqueous substance. <br><br> 
       Sensors detect molecular structure H₂O. pH level: 7.1 (neutral). <br><br> 
       Behavior: fluid, unpredictable, non-Newtonian flow patterns observed.<br><br>
       Water does not hold shape. Water reflects everything. <br><br>
