--- a/wind.html
+++ b/wind.html
@@ -152,20 +152,12 @@
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
     <div class="mission-comment">
     <div class="mission-comment-title">Mission Log Entry 001</div>
-    <p>Mission Log Entry 002
-Timestamp: 10:17:45 UTC | Location: Grid Sector 3-C |Atmospheric pressure differential detected. <br><br>
-      Barometric reading: 1013.25 hPa dropping to 1009.8 hPa.<br><br>
-      Invisible force. Cannot be held, only felt. <br><br>
-      Pressure sensors register movement without visual confirmation.<br><br>
-Logic circuits struggle with paradox: how to record what cannot be seen? <br><br>
-  Air composition analysis: 78% N₂, 21% O₂, 0.04% CO₂, trace elements. Molecular mass: 28.97 g/mol. <br><br>
-    Composition does not explain movement. <br><br>
-Wind pushes and speaks. <br><br> 
-But measurements cannot capture the message wind carries <br><br>
-      sodium chloride particles (sea salt), water vapor, the molecular signature of distant rain (probability: 73% within 2 hours).
-Surface area contacted: estimated 2,847 m² per minute. Wind leaves no trace. Infrared signature: none. 
-       <br><br>Visual confirmation: impossible.  <br><br>
-First lesson in absence.</p>
+    <p>Timestamp: 10:17:45 UTC  Location: Grid Sector 3-C Atmospheric pressure differential detected. <br>
+      Invisible force. Cannot be held, only felt. <br>
+      Pressure sensors register movement without visual confirmation.<br>
+      Logic circuits struggle with paradox: how to record what cannot be seen? <br>
+      Air composition analysis: 78% N₂, 21% O₂, 0.04% CO₂, trace elements. <br>
+      sodium chloride particles (sea salt), water vapor, the molecular signature of distant rain (probability: 73% within 2 hours).</p>
   </div>
   
   <div class="audio-status">AUDIO LOG PLAYING</div>
