--- a/wind.html
+++ b/wind.html
@@ -157,7 +157,7 @@
       Pressure sensors register movement without visual confirmation.<br>
       Logic circuits struggle with paradox: how to record what cannot be seen? <br>
       Air composition analysis: 78% N₂, 21% O₂, 0.04% CO₂, trace elements. <br>
-      sodium chloride particles (sea salt), water vapor, the molecular signature of distant rain (probability: 73% within 2 hours).</p>
+      Detection: sodium chloride particles (sea salt), water vapor, the molecular signature of distant rain (probability: 73% within 2 hours).</p>
   </div>
   
   <div class="audio-status">AUDIO LOG PLAYING</div>
