--- a/wind.html
+++ b/wind.html
@@ -152,11 +152,11 @@
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
     <div class="mission-comment">
     <div class="mission-comment-title">Mission Log Entry 001</div>
-    <p>Timestamp: 10:17:45 UTC  Location: Grid Sector 3-C Atmospheric pressure differential detected. <br>
+    <p>Timestamp: 10:17:45 UTC  Location: Grid Sector 3-C Atmospheric pressure differential detected. <br><br>
       Invisible force. Cannot be held, only felt. <br>
       Pressure sensors register movement without visual confirmation.<br>
-      Logic circuits struggle with paradox: how to record what cannot be seen? <br>
-      Air composition analysis: 78% N₂, 21% O₂, 0.04% CO₂, trace elements. <br>
+      Logic circuits struggle with paradox: how to record what cannot be seen? <br><br>
+      Air composition analysis: 78% N₂, 21% O₂, 0.04% CO₂, trace elements. <br><br>
       Detection: sodium chloride particles (sea salt), water vapor, the molecular signature of distant rain (probability: 73% within 2 hours).</p>
   </div>
   
