--- a/living.html
+++ b/living.html
@@ -68,6 +68,8 @@
       color: #38761d;
       margin-top: 0.5rem;
     }
+
+
 .mission-comment {
   position: fixed;
   top: 50%;
@@ -76,7 +78,7 @@
   max-width: 280px;
   padding: 1.5rem;
   background: rgba(255, 255, 255, 0.92);
-  border-left: 3px solid #005cc5;
+  border-left: 3px solid #d95e00;  /* Change to orange */
   color: #333;
   font-size: 0.85rem;
   line-height: 1.7;
@@ -86,19 +88,13 @@
 
 .mission-comment-title {
   font-family: 'Share Tech Mono', monospace;
-  color: #005cc5;
+  color: #d95e00;  /* Change to orange */
   font-weight: bold;
   margin-bottom: 0.75rem;
   font-size: 0.8rem;
   text-transform: uppercase;
   letter-spacing: 0.05em;
 }
-
-.mission-comment p {
-  margin: 0;
-  color: #555;
-}
-
     .back-button {
       position: fixed;
       bottom: 2rem;
@@ -153,7 +149,7 @@
 
   <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
   
-  <a href="https://vioanl.github.io/digital-poetry-map/" class="back-button">← RETURN TO MAP</a>
+
     <div class="mission-comment">
     <div class="mission-comment-title">Mission Log Entry 001</div>
     <p>Timestamp: 11:03:27 UTC  Location: Grid Sector 6-F (Biodiverse Zone) <br>
