--- a/living.html
+++ b/living.html
@@ -156,16 +156,12 @@
 Organic material detected. Classification: living. <br>
 Thermal imaging: hotspot detected at 313.7 K (40.55°C). <br>
 Systems detect patterns:<br>
-Heartbeat: 68 bpm (human)<br>
-Respiration: 14 breaths/min (human)<br>
-ATP production: cellular energy measured via bioluminescence<br>
-DNA replication: estimated 50 base pairs/second (E. coli)
-
-Life does not compute; life simply is. No input/output logic. No binary state..
+Heartbeat: 68 bpm. Respiration: 14 breaths/min (human). (<br>
+ATP production: cellular energy measured via bioluminescence<br>      
 Bird observed: wingspan 28cm (±0.5cm), mass 45g (±2g), heart rate 400 bpm  <br>
 Bird does not calculate trajectory (no onboard GPS detected). Efficiency: unclear.<br>
-Tree observed: height 14.7m, trunk diameter 0.83m, leaf count (estimated): 200,000. <br>
-Tree grows wihtout plan. Annual growth rate: 3.2 cm diameter/year. Efficiency: unclear.<br>
+Tree observed: height 14.7m, leaf count (estimated): 200,000. <br>
+Tree grows wihtout plan. Efficiency: unclear.<br>
 Life operates on principles beyond efficiency. <br>
 Biological imperative detected in organic matter: survive, reproduce, grow.<br>
 New subroutines generated: 4,829 new neural pathways (simulated). Learning rate: +340% above baseline.
