--- a/wind.html
+++ b/wind.html
@@ -73,7 +73,7 @@
   max-width: 280px;
   padding: 1.5rem;
   background: rgba(255, 255, 255, 0.92);
-  border-left: 3px solid #005cc5;
+  border-left: 3px solid #808080;
   color: #808080;
   font-size: 0.85rem;
   line-height: 1.7;
