--- a/living.html
+++ b/living.html
@@ -155,10 +155,10 @@
     <p>Timestamp: 11:03:27 UTC  Location: Grid Sector 6-F (Biodiverse Zone) <br>
 Organic material detected. Classification: living. <br>
 Thermal imaging: hotspot detected at 313.7 K. <br>
-Systems detect patterns:Heartbeat: 68 bpm. Respiration: 14 breaths/min. <br>     
-Bird observed: wingspan 28cm, mass 45g, heart rate 400 bpm  <br>
+Systems detect patterns:Heartbeat: 68 bpm,  14 breaths/min. <br>     
+Bird: wingspan 28cm, mass 45g, heart rate 400 bpm  <br>
 Bird does not calculate trajectory (no onboard GPS). Efficiency: unclear.<br>
-Tree observed: height 14.7m, leaf count: 200,000. <br>
+Tree: height 14.7m, leaf count: 200,000. <br>
 Tree grows wihtout plan. Efficiency: unclear.<br>
 Life operates on principles beyond efficiency. <br>
 Biological imperative detected in organic matter: survive, reproduce, grow.<br>
